--- a/framework/less/typography.less
+++ b/framework/less/typography.less
@@ -264,8 +264,8 @@ hr {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
-.atk-text-caps() {
-  letter-spacing: 0.1em;
+.atk-text-caps(@spacing:0.1em) {
+  letter-spacing: @spacing;
   text-transform: uppercase;
 }
 .atk-text-size--9xl() {
