--- a/framework/less/misc.less
+++ b/framework/less/misc.less
@@ -72,12 +72,15 @@ img::-moz-selection {
 .atk-width-auto {
   width: auto !important;
 }
-.atk-clearFix {
+.atk-clear {
   .clear-fix;
 }
 .atk-disabled {
   .opacity(50);
   pointer-events: none;
+}
+.atk-filler {
+  .filler;
 }
 
 
