--- a/framework/less/layouts.less
+++ b/framework/less/layouts.less
@@ -26,7 +26,7 @@ html, body, .atk-layout  {
 		vertical-align: top;
 		width: 0.01em;
 		&.atk-layoutExpand {
-			width: auto;
+			width: 100%;
 		}
 	}
 }
